--- a/css/general/map.css
+++ b/css/general/map.css
@@ -1,6 +1,5 @@
 
 @import url(root.css);
-@import url(navbar.css);
 @import url(footer.css);
 
 
@@ -8,54 +7,6 @@ body{
     font-family: "Lithos Pro Regular";
 }
 
-/*navbar menu*/
-.img-logo{
-    max-width: 90px;
-    max-height: 90px;
-}
-.navbar{
-    position: fixed;
-}
-/*propio*/
-.menu-mexAnt{
-    background: var(--blue-cream);
-    height: 100px;
-    width: 100%;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
-
-.menu-mexAnt img{
-    height: 90px;
-    width: 90px;
-    border-radius: 50%;
-}
-
-.menu-mexAnt ul{
-    float: right;
-    margin-right: 20px;
-}
-
-.menu-mexAnt ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-}
-
-.menu-mexAnt  ul li a{
-    color: var(--sand);
-    font-size: 30px;
-    padding-right: 10px 15px;
-    border: 5px;
-    text-transform: uppercase;
-    font-family: "Lithos Pro Regular";
-}
-
-.menu-mexAnt ul li a.menu-selected, a:hover{
-    color: var(--blue-strong);
-    transition: 0.4s;
-}
 
 .content{
     background-color: var(--blue-strong);
@@ -138,6 +89,11 @@ body{
     font-size: 32px;
     color: var(--sand);
     text-decoration: none;
+}
+
+#container-page{
+    background-color: var(--blue-strong);
+    height: 100%;
 }
 
 .map__list a.is-active{
