--- a/css/general/navbar.css
+++ b/css/general/navbar.css
@@ -48,4 +48,51 @@
     width: 150px;
     float: right;
 }
+/*navbar menu*/
+.img-logo{
+    max-width: 90px;
+    max-height: 90px;
+}
+.navbar{
+    position: fixed;
+}
+/*propio*/
+.menu-mexAnt{
+    background: var(--blue-cream);
+    height: 100px;
+    width: 100%;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
 
+.menu-mexAnt img{
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+}
+
+.menu-mexAnt ul{
+    float: right;
+    margin-right: 20px;
+}
+
+.menu-mexAnt ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+.menu-mexAnt  ul li a{
+    color: var(--sand);
+    font-size: 30px;
+    padding-right: 10px 15px;
+    border: 5px;
+    text-transform: uppercase;
+    font-family: "Lithos Pro Regular";
+}
+
+.menu-mexAnt ul li a.menu-selected, a:hover{
+    color: var(--blue-strong);
+    transition: 0.4s;
+}
