--- a/css/general/modal.css
+++ b/css/general/modal.css
@@ -1,4 +1,4 @@
-
+@import url(root.css);
 
 /*pop up when u click something on the map*/
 .modal{
@@ -66,11 +66,37 @@
     height: 75%;
     width: 75%;
     align-items: center;
-    background-color: wheat;
+    background-color: var(--blue-cream);
     position: absolute;
     top:50%;
     left: 50%;
-    transform: translate(-50%,-50%) scale(0);
+    transform: translate(-50%,-50%) scale(1);
+    border-radius: 50px;
+    border : 5px solid var(--blue-medium);
+    border-style: dotted;
+    color: var(--blue-medium);
+}
+
+#close-button{
+    text-decoration: none;
+    font-size: 50px;
+    color: var(--blue-medium);
+    transition: 0.4s all ease;
+}
+
+#close-button:hover{
+    color: var(--blue-strong);
+}
+
+#family-txt{
+}
+
+#subfamily-txt{
+    padding-left: 20px;
+}
+
+#item-modal{
+    display: flex;
 }
 
 /* .myModal{
