--- a/css/web/hormigas.css
+++ b/css/web/hormigas.css
@@ -1,6 +1,20 @@
+@import url(../general/root.css);
 #ant-photo{  
     margin-top: 10px;
     max-width: 100%;
     max-height: 350px;
     border-radius: 25px;
+}
+
+#container-modals-ants{
+    background-color: var(--blue-strong);
+}
+
+#filter{
+    background-color: var(--blue-medium);
+    color: var(--sand);
+    border: none;
+    height: 50px;
+    font-size: 25px;
+    font-weight: bold;
 }
