--- a/css/admin/table-content-admin.css
+++ b/css/admin/table-content-admin.css
@@ -1,9 +1,26 @@
 @import url(../general/root.css);
+
+.mytable{
+    height: 600px;
+    overflow-y: auto;
+}
+h2{
+    font-weight: bold;
+    font-size: 20px;
+    color: var(--blue-cream);
+}
+#my-row-complete{
+    color: var(--sand);
+    width: 100%;
+    height: 75px;
+}
+
 .table{
     font-size: 25px;
     color: var(--blue-medium);
     width: 100%;
     text-align: center;
+   
 }
 .table thead tr{
     background-color: var(--blue-cream);
@@ -17,8 +34,6 @@
 .table td{
     align-items: center;
     padding: 12px 15px;
-
-
 }
 
 .table td{
@@ -29,6 +44,7 @@
 .table tbody tr{
     background-color: #f3f3f3 ;
     border-bottom: 2px solid var(--blue-cream);
+    max-height: 100px;
 }
 
 .table tbody tr:last-of-type{
