--- a/css/general/logIn.css
+++ b/css/general/logIn.css
@@ -1,15 +1,15 @@
 @import url(root.css);
+body{
+    background-color: var(--blue-strong);
+}
 
 .img-logo{
     width: 90px;
     height: 90px;
 }
 
-#navbar{
-    background-color: var(--blue-medium);
-}
 
-#container-all-page{
+#modal-signIn-singUp{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,7 +18,10 @@
     align-items: center;
     background: var(--blue-medium);
     background-color: var(--blue-medium);
-    border-radius: 2.5%;
+    border: 10px solid var(--sand);
+    border-style: dotted;
+    border-radius: 50px;
+    font-family: "Lithos Pro Regular";
 }
 
 
@@ -28,10 +31,17 @@
     width: 100%;
 }
 
+#myNavbar{
+    margin: 0;
+    padding: 0;
+    top: 0;
+    height: 100px;
+    width: 100%;
+    background-color: var(--blue-medium);
+}
+
 #btn-section{
-    align-items: center;
-    text-align: center;
-    width: 20%;
+   width: 40%;
 }
 
 #btn-section span{
@@ -41,4 +51,72 @@
 
 .form-label{
     color: var(--sand);
+}
+
+#my-row{
+    font-size: 50px;
+    color: var(--blue-cream);
+}
+
+.btn{
+    width: 75%;
+}
+
+#title-page{
+    font-weight: bold;
+    font-size: 40px;
+    font-family: "Lithos Pro Regular";
+    color: var(--sand);
+}
+
+
+#btn-submit{
+    background-color: var(--green-cream);
+    color: var(--blue-medium);
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#btn-submit:hover{
+    background-color: var(--blue-strong);
+    color: var(--sand);
+}
+
+#btn-reset:hover{
+    background-color: var(--blue-strong);
+    color: var(--sand);
+}
+
+
+
+#btn-reset{
+    background-color: var(--pink-cream);
+    color: var(--blue-medium);
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#my-row-complete{
+    color: var(--sand);
+    width: 100%;
+    height: 75px;
+}
+
+#btnSingUp{
+    width: 40%;
+    background-color: var(--blue-cream);
+    color: var(--sand);
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#btnSingUp:hover{
+    background-color: var(--blue-strong);
+    color: var(--blue-cream);
 }
